# coding-exercise-jp-2024-04

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CppTemplateConfig.cmake.in  CppTemplateConfigVersion.cmake.in  Makefile  README.md  conanfile.txt  repo-cli.py  requirements.txt
.conan/profiles/: default
apps/app1/: CMakeLists.txt  app1.cc
docker-images/build_env/: docker_wrapper_extensions.py
docker-images/build_env/Docker/: Dockerfile  entrypoint.sh
helpers/docker-wrapper/: MANIFEST.in  setup.py  tox.ini
helpers/docker-wrapper/src/docker_wrapper/: cli.py
include/libA/: libA.h
src/: CMakeLists.txt
src/libA/: CMakeLists.txt  libA.cc
tests/: CMakeLists.txt  example_test.cc
